--- a/bsp/HAL/rmcs_slave.ioc
+++ b/bsp/HAL/rmcs_slave.ioc
@@ -25,17 +25,18 @@ Mcu.CPN=STM32F407IGH6
 Mcu.Family=STM32F4
 Mcu.IP0=CAN1
 Mcu.IP1=CAN2
-Mcu.IP10=USB_DEVICE
-Mcu.IP11=USB_OTG_FS
+Mcu.IP10=USART6
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_FS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
-Mcu.IP6=TIM5
-Mcu.IP7=USART1
-Mcu.IP8=USART3
-Mcu.IP9=USART6
-Mcu.IPNb=12
+Mcu.IP6=TIM4
+Mcu.IP7=TIM5
+Mcu.IP8=USART1
+Mcu.IP9=USART3
+Mcu.IPNb=13
 Mcu.Name=STM32F407I(E-G)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PB5
@@ -52,14 +53,15 @@ Mcu.Pin18=PH12
 Mcu.Pin19=PH11
 Mcu.Pin2=PB4
 Mcu.Pin20=PH10
-Mcu.Pin21=PA4
-Mcu.Pin22=PC4
-Mcu.Pin23=PC5
-Mcu.Pin24=PA7
-Mcu.Pin25=PB0
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin28=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin21=PD14
+Mcu.Pin22=PA4
+Mcu.Pin23=PC4
+Mcu.Pin24=PC5
+Mcu.Pin25=PA7
+Mcu.Pin26=PB0
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin29=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PB3
 Mcu.Pin4=PA14
 Mcu.Pin5=PA13
@@ -67,7 +69,7 @@ Mcu.Pin6=PB7
 Mcu.Pin7=PB6
 Mcu.Pin8=PD0
 Mcu.Pin9=PC11
-Mcu.PinsNb=29
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
@@ -160,12 +162,21 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=INT1_GYRO
 PC5.Locked=true
 PC5.Signal=GPXTI5
+PCC.Checker=false
+PCC.Line=STM32F407/417
+PCC.MCU=STM32F407I(E-G)Hx
+PCC.PartNumber=STM32F407IGHx
+PCC.Series=STM32F4
+PCC.Temperature=25
+PCC.Vdd=3.3
 PD0.Locked=true
 PD0.Mode=CAN_Activate
 PD0.Signal=CAN1_RX
 PD1.Locked=true
 PD1.Mode=CAN_Activate
 PD1.Signal=CAN1_TX
+PD14.Locked=true
+PD14.Signal=S_TIM4_CH3
 PG14.Locked=true
 PG14.Mode=Asynchronous
 PG14.Signal=USART6_TX
@@ -194,6 +205,7 @@ PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -203,6 +215,7 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407IGHx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.1
 ProjectManager.FreePins=false
+ProjectManager.FreePinsContext=
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
@@ -260,6 +273,8 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
+SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
+SH.S_TIM4_CH3.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
 SH.S_TIM5_CH1.ConfNb=1
 SH.S_TIM5_CH2.0=TIM5_CH2,PWM Generation2 CH2
@@ -274,6 +289,9 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM4.IPParameters=Channel-PWM Generation3 CH3,Prescaler
+TIM4.Prescaler=167
 TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM5.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM5.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
